# moirai

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PHASE_0_ANALYSIS.md  PHASE_1_SCAFFOLD.md  PHASE_2_CORE_STORAGE.md  PHASE_3_WORLD_LIFECYCLE.md  PHASE_4_SCHEDULE.md  PHASE_5_QUERIES.md  PHASE_6_QUALITY.md  PHASE_7_INTEGRATIONS.md  README.md  ROADMAP.md  deny.toml
.github/workflows/: ci.yml
benches/: commands.rs  consumer_hot_paths.rs  events.rs  prepared_queries.rs  q16.rs  queries.rs  runtime_support.rs  schedule.rs  storage.rs  world_lifecycle.rs
docs/: ARCHITECTURE.md  SPEC_FORMAT.md  coverage.md  parity.md  perf.md  wyrd-parity.md
docs/perf/: archetype-relocation-boxing.md  benchmark-timed-setup.md  binary-fixed-step-cadence.md  binary-size-needs-downstream-artifact.md  bounded-event-ring-buffer.md  command-discard-reserved-scan.md  command-flush-reuse-op-buffer.md  command-preflight-linear-membership.md  compile-time-baseline-missing.md  composite-condition-tree-cloning.md  consumer-integrated-hot-paths.md  delta-membership-log.md  dense-entity-scratch.md  empty-table-archetype-cache-rescan.md  event-reader-prune-amortization.md  event-reader-sequence-offset.md  event-registry-hot-lookup.md  exact-id-duplicate-validation.md  exact-id-plan-cache-admission.md  frame-event-clear-index.md  prepared-query-state.md  q16-cross-crate-inline-candidate.md  q16-fixed-point-chain-collapse.md  query-cache-invalidation-granularity.md  query-ids-cache-copy.md  query-iteration-redundant-probes.md  query2-plan-cache-hit-rebuild.md  regression-threshold-unreproducible.md  resource-scope-read-path.md  revision-key-cache-support.md  sparse-index-footprint.md  system-local-initialization.md  typed-cache-per-item-validation.md
scripts/: coverage_union.py  generate_parity_ledger.py  perf_capture.py  perf_experiment.py  perf_summarize.py  test_perf_tooling.py  verify_all.sh  verify_coverage_union.sh  verify_phase6.sh
specs/001-scaffold-quality-baseline/: design.md  spec.toml
specs/002-moirai-integration-readiness/: design.md  requirements.md  spec.toml
specs/003-moirai-milestone-hardening/: design.md  requirements.md  spec.toml
specs/MANUAL-scaffold-quality-baseline/: requirements.md
src/: app.rs  bench_internals.rs  diagnostics.rs  lib.rs  operation.rs  prelude.rs  query.rs  revision.rs  state.rs  time.rs
src/command/: mod.rs  queue.rs
src/component/: mod.rs  options.rs  registry.rs
src/entity/: allocator.rs  id.rs  mod.rs
src/event/: component.rs  mod.rs  queue.rs  registry.rs
src/examples/: mod.rs
src/math/: mod.rs  q16.rs
src/query/: cache.rs  cursor.rs  effects.rs  entity.rs  error.rs  exact_id.rs  iter.rs  mod.rs  params.rs  prepared.rs  spec.rs
src/resource/: mod.rs  store.rs
src/schedule/: builder.rs  compiled.rs  condition.rs  error.rs  mod.rs  owner.rs  runner.rs  stage.rs  system.rs
src/storage/: archetype.rs  erased.rs  mod.rs  sparse.rs  table.rs
src/testkit/: app.rs  config.rs  driver.rs  error.rs  ext.rs  mod.rs  record.rs  replay.rs  report.rs  step.rs
src/world/: access.rs  builder.rs  bundle.rs  error.rs  events.rs  flush.rs  guard.rs  lease.rs  mod.rs  owner.rs  resources.rs  spawn.rs
tests/: allocation.rs  app_schedule_builder.rs  commands_deferred.rs  component_lifecycle.rs  error_display.rs  events.rs  hostile.rs  parity_gaps.rs  parity_ledger.rs  phase3_failure_contracts.rs  prelude.rs  public_api.rs  q16.rs  query.rs  query_cache.rs  query_effects.rs  query_model.rs  query_result_cache.rs  readme.rs  resources.rs  schedule.rs  schedule_observer.rs  sparse_world_slice.rs  testkit.rs  update_plan.rs  world_lifecycle_state.rs  world_table_bundle.rs
tests/ui/: inherent_test_controls.rs  inherent_test_controls.stderr  internal_allocator.rs  internal_allocator.stderr  internal_command_queue.rs  internal_command_queue.stderr  internal_entity.rs  internal_entity.stderr  internal_event_storage.rs  internal_event_storage.stderr  internal_registry.rs  internal_registry.stderr  internal_schedule_runner.rs  internal_schedule_runner.stderr  internal_storage.rs  internal_storage.stderr  internal_world_query_plan.rs  internal_world_query_plan.stderr  premature_component_namespace.rs  (+23 more)
(+108 files in other folders)
