[package]
name = "moirai"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A small deterministic no_std ECS for constrained and headless games"
readme = "README.md"
license = "MIT"
autobenches = false

[features]
default = []
std = []
testkit = []

[dependencies]

[dev-dependencies]
divan = "0.1.21"
rstest = "0.26.1"
trybuild = "=1.0.117"

[[bench]]
name = "harness"
path = "benches/harness.rs"
harness = false

[[bench]]
name = "storage"
path = "benches/storage.rs"
harness = false

[[bench]]
name = "q16"
path = "benches/q16.rs"
harness = false

[[bench]]
name = "world_lifecycle"
path = "benches/world_lifecycle.rs"
harness = false