[package]
name = "moirai"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A small deterministic no_std ECS for constrained and headless games"
readme = "README.md"
repository = "https://github.com/bnomei/moirai"
documentation = "https://docs.rs/moirai"
license = "MIT"
autobenches = false

[package.metadata.docs.rs]
all-features = true

[features]
default = []
std = []
testkit = []
bench-internals = []

[dependencies]

[dev-dependencies]
divan = "0.1.21"
rstest = "0.26.1"
trybuild = "=1.0.117"

[[bench]]
name = "harness"
path = "benches/harness.rs"
harness = false

[[bench]]
name = "storage"
path = "benches/storage.rs"
harness = false

[[bench]]
name = "q16"
path = "benches/q16.rs"
harness = false

[[bench]]
name = "world_lifecycle"
path = "benches/world_lifecycle.rs"
harness = false

[[bench]]
name = "schedule"
path = "benches/schedule.rs"
harness = false

[[bench]]
name = "queries"
path = "benches/queries.rs"
harness = false

[[bench]]
name = "commands"
path = "benches/commands.rs"
harness = false

[[bench]]
name = "events"
path = "benches/events.rs"
harness = false

[[bench]]
name = "prepared_queries"
path = "benches/prepared_queries.rs"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "runtime_support"
path = "benches/runtime_support.rs"
harness = false

[[bench]]
name = "consumer_hot_paths"
path = "benches/consumer_hot_paths.rs"
harness = false

[[test]]
name = "testkit"
path = "tests/testkit.rs"
required-features = ["testkit"]
